# marcheng_site

./: .dockerignore  .env.example  .gitignore  .prettierignore  README.md  marcheng_home_prompt.md  marcheng_setup_monorepo_prompt.md  package.json  pnpm-lock.yaml  turbo.json
Google Stitch/: DESIGN.md  code.html
apps/api/: .env.example  Dockerfile  nixpacks.toml  package.json  pyproject.toml  railway.json
apps/api/src/marcheng_api/: __init__.py  config.py  main.py
apps/api/src/marcheng_api/routes/: contact.py  health.py
apps/api/src/marcheng_api/schemas/: contact.py
apps/api/src/marcheng_api/scripts/: export_openapi.py
apps/api/src/marcheng_api/services/: email.py
apps/api/tests/: conftest.py  test_health.py
apps/web/: Dockerfile  i18n.ts  middleware.ts  next.config.mjs  nixpacks.toml  openapi.json  package.json  railway.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css
apps/web/app/[locale]/: layout.tsx  page.tsx
apps/web/components/: Footer.tsx  LanguageSwitcher.tsx  Nav.tsx
apps/web/components/sections/: About.tsx  Clients.tsx  Contact.tsx  Hero.tsx  Services.tsx  Stats.tsx
apps/web/components/ui/: Button.tsx  Card.tsx  Container.tsx
apps/web/lib/: api-types.ts  api.ts
apps/web/messages/: en.json  es.json  it.json  pt.json
